# forge-ai

./: context.md  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/web/: package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: footer.tsx  nav.tsx
apps/web/src/lib/supabase/: client.ts  server.ts
contracts/: enums.ts  types.ts
supabase/: seed.sql
supabase/migrations/: 20260322000000_init.sql
tasks/phase-0/0.01-monorepo/: DONE
tasks/phase-0/0.02-supabase-schema/: DONE
tasks/workstream-p/p1.01-scaffold-nextjs/: DONE
tasks/workstream-p/p1.02-landing-hero/: DONE
